codepkg/objects/Lead_Status_History_Tracker__c.object
<CustomObject>
    <description>Lead Aging</description>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>IF((End_Date__c  -  CreatedDate) &lt; 0 , 0 , End_Date__c  -  CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>From_Owner__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>From Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Owner__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Lead Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Lead Status History Tracker</relationshipLabel>
        <relationshipName>Lead_Status_History_Trackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Lead Status History Tracker</relationshipLabel>
        <relationshipName>Lead_Status_History_Tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Queue_Owner_From__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>From Queue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_Owner_To__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>To Queue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_From__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_To__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Owner__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>To Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Lead Status History Tracker</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Lead__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LH-{0000}</displayFormat>
        <label>Lead History Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Status History Tracker</pluralLabel>
    <recordTypes>
        <fullName>Owner_Record_Tracker</fullName>
        <active>true</active>
        <description>Owner Record Tracking</description>
        <label>Owner Record Tracker</label>
    </recordTypes>
    <recordTypes>
        <fullName>Status_Record_Tracker</fullName>
        <active>true</active>
        <description>Status Record Tracking</description>
        <label>Status Record Tracker</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>